- Using dummy-vgn and sonarqube