@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2019 Alexandre Oliveira <alexandre.oliveira@viglet.com> 
+ * Copyright (C) 2016-2021 Alexandre Oliveira <alexandre.oliveira@viglet.com> 
  * 
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -76,7 +76,7 @@ public class TuringUtils {
 			DataType dt = add.getDataType();
 			Object val = primaryKeyValue;
 			if (dt.isInt() || dt.isNumerical() || dt.isTinyInt())
-				val = new Integer(primaryKeyValue);
+				val = Integer.valueOf(primaryKeyValue);
 			ObjectTypeRef otr = new ObjectTypeRef(contentType);
 			AttributeData atd = new AttributeData(add, val, otr);
 			ManagedObjectRef ref = new ManagedObjectRef(otr, new AttributeData[] { atd });
